# python-graphql-core-rs

./: Cargo.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
src/: lib.rs
