[package]
name = "graphql-core-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "graphql_core_rs"
crate-type = ["cdylib"]

[dependencies]
graphql-parser = "0.4.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.17.0"
