[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "python-graphql-core-rs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
